# uv-tests

./: pyproject.toml
docs/: api.md  index.md
examples/: basic_usage.py
scripts/: setup.py
scripts/langchain/: countries_example.py  free_example.py  prompt_examples.py  pydantic_examples.py  test langchain.ipynb  test_pydantic.py
scripts/langgraph/: example.py  router.py
scripts/misc/: openai_setup.py
scripts/news/: main.py  tests.ipynb
scripts/smol/: smol.ipynb  smol.py
src/app/: __init__.py
src/app/core/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_main.py
