[project]
name = "uv-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "numpy>=2.2.6",
    "tqdm>=4.67.1",
    "langchain-community>=0.3.27",
]
