[project]
name = "uv-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "numpy>=2.2.6",
    "tqdm>=4.67.1",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.5",
    "fastapi>=0.116.1",
    "requests>=2.32.4",
    "transformers>=4.55.2",
    "diffusers>=0.35.0",
    "torch>=2.8.0",
    "pyttsx3>=2.99",
    "uvloop>=0.21.0",
    "accelerate>=1.10.0",
    "uvicorn>=0.35.0",
]
